syntax = "proto3";

package sec11;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.sanglt.models.sec11";

message BalanceCheckRequest {
  int32 account_number = 1;
}


message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountResponse {
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

service BankService {
    // Unary
   rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

   // Server streaming
   rpc Withdraw(WithdrawRequest) returns (stream Money);
}